<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/layout_titlebar_with_divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c_gray_f7f7f7"
        android:paddingTop="50dp"
        >

        <TextView
            android:id="@+id/tv_bind_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="为了您的账户安全，请绑定手机号码"
            android:textSize="16sp"
            android:textColor="@color/c_gray_666666"/>

        <RelativeLayout
            android:layout_below="@id/tv_bind_tip"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:id="@+id/phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/icon_phone_number"/>

                <EditText
                    android:id="@+id/et_bind_number"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/please_enter_phone_number"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@color/c_gray_333333"
                    android:textColorHint="@color/c_gray_cccccc"
                    android:textSize="16sp"
                    />

                <ImageView
                    android:id="@+id/iv_clean_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_login_clean"
                    android:visibility="gone"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:layout_below="@+id/phone_number_layout"
                android:layout_marginLeft="30dp"
                android:background="@color/c_gray_dddddd"/>


            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_below="@+id/password_picture"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/icon_password"/>

                <EditText
                    android:id="@+id/et_bind_code"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/please_enter_code"
                    android:inputType="number"
                    android:textColor="@color/c_gray_333333"
                    android:textColorHint="@color/c_gray_cccccc"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/tv_bind_request_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/request_code"
                    android:textColor="@color/request_code_color"
                    android:textSize="14sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:layout_below="@+id/password_layout"
                android:layout_marginLeft="30dp"
                android:background="@color/c_gray_dddddd"/>


            <TextView
                android:id="@+id/tv_bind_phone_bind"
                android:layout_width="260dp"
                android:layout_height="48dp"
                android:layout_below="@+id/password_layout"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_login_text_enable"
                android:enabled="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/bind_text"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/iv_bind_phone_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_bind_phone_bind"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="11dp"
                android:src="@mipmap/icon_login_loading"
                android:visibility="gone"/>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
