<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_register"
    android:orientation="vertical">

    <include
        android:visibility="gone"
        layout="@layout/include_view_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:visibility="gone"
        android:background="@color/c_gray_dddddd" />
    <ImageView
        android:scaleType="center"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_marginTop="30dp"
        android:text="用户注册"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:background="@drawable/dd_shape_60ffffff_content_8"
        android:id="@+id/rl_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="30dp"
        android:layout_margin="30dp">

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_phone_number" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_enter_name"
                android:maxLength="11"
                android:textColor="@color/black"
                android:textColorHint="@color/c_gray_666666"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/phone_number_layout"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="16dp"
            android:background="@color/c_gray_eeeeee" />
        <LinearLayout
            android:id="@+id/phone_number_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@+id/name_layout"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_phone_number" />

            <EditText
                android:id="@+id/window_login_number"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_enter_phone_number"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/black"
                android:textColorHint="@color/c_gray_666666"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/window_clean_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_login_clean"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/phone_number_layout"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="16dp"
            android:background="@color/c_gray_eeeeee" />

        <LinearLayout
            android:id="@+id/password_code"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@+id/phone_number_layout"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_pic_code" />

            <EditText
                android:id="@+id/window_code"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入验证码"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textColorHint="@color/c_gray_666666"
                android:textSize="16sp" />
            <TextView
                android:gravity="center"
                android:textColor="@color/c_gray_333333"
                android:id="@+id/tv_getCode"
                android:text="点击获取验证码"
                android:layout_width="120dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_picture"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@+id/password_code"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_pic_code" />

            <EditText
                android:id="@+id/window_login_pic_code"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:maxLength="18"
                android:textColor="@color/black"
                android:textColorHint="@color/c_gray_666666"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/password_repeat"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@+id/password_picture"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_pic_code" />

            <EditText
                android:id="@+id/et_pwd_again"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请再次输入密码"
                android:inputType="textPassword"
                android:maxLength="18"
                android:textColor="@color/black"
                android:textColorHint="@color/c_gray_666666"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/password_repeat"
            android:layout_marginTop="25dp"
            android:background="@drawable/dd_shape_rec_red_44"
            android:gravity="center"
            android:text="@string/register_text"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>
</LinearLayout>